Adding basic structure for flashcards

--- a/features/flashcards.html
+++ b/features/flashcards.html
@@ -4,20 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="cards.css">
-    <title>Document</title>
+    <title>Russian Language Basics</title>
 </head>
-<body>
-    <div class="card-wrapper">
-        <div class="card-body">
-          <div class="card-front">
-            <p>Lorem ipsum dolor?</p>
-          </div>
-          <div class="card-back">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
-          </div>
-        </div>
-      </div>
-      
-    
+<body>     
+    <div class="header">
+      Learning Russian: Basic Vocabulary
+    </div>
+    <div class="progress">
+      Card <span id="current-card">1</span> of <span id="total-cards">3</span>
+    </div>
+  <div id="cards-container">
+
+  </div>
+  <button id="prev">Previous</button>
+  <button id="next">Next</button>
 </body>
 </html>
