--- a/features/flashcards.html
+++ b/features/flashcards.html
@@ -7,6 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
+    <script src="scripts.js" defer></script>
     <title>Russian Language Basics</title>
 </head>
 <body>     
@@ -16,10 +17,14 @@
     <div class="progress">
       Card <span id="current-card">1</span> of <span id="total-cards">3</span>
     </div>
-  <div id="cards-container">
-    <button id="prev">Previous</button>
-  <button id="next">Next</button>
+
+
+  <div class="cards_flexcontainer">
+    <div id="cards-container"> 
+    </div>
   </div>
-  
-</body>
+
+
+ 
+  </body>
 </html>
