Adding btns with styling

--- a/features/flashcards.html
+++ b/features/flashcards.html
@@ -25,6 +25,11 @@
   </div>
 
 
+<div class="btns_flexcontainer">
+  <button id="prev">Previous</button>
+  <button id="next">Next</button>
+</div>
+
  
   </body>
 </html>
