add part 1 of lesson content

--- a/features/lesson.html
+++ b/features/lesson.html
@@ -10,13 +10,31 @@
 
 <body>
     <h1 id="main-heading">Learning Russian: Lesson 1 | Basic Vocabulary</h1>
+    <h2>Part 1/6</h2>
     <section class="lesson-section">
-        <div class="lesson"></div>
+        <div class="lesson">
+            <article class="part-one">
+                <img src="../images/waving.jpg" alt="man waving" class="lesson-img">
+                <div class="lesson-text">
+                    <p>This is Ivan. He is the new student in your Russian learning class and he came over to say...</p>
+                    <p class="vocabulary">Ivan: <span>Привет! (Privet)</span></p>
+                    <p class="prompt">Choose what you think Ivan is saying:</p>
+                </div>
+                <div class="lesson-questions">
+                    <input type="radio" id="good-morning" class="radio-input">
+                    <label for="good-morning">Good morning</label>
+                    <input type="radio" id="hello" class="radio-input">
+                    <label for="hello">Hello</label>
+                    <input type="radio" id="how-are-you" class="radio-input">
+                    <label for="how-are-you">How are you doing?</label>
+                </div>
+
+            </article>
 
         </div>
         <div class="buttons">
-            <input type="button" class="button" value="Skip for now">
-            <input type="button" class="button" value="Submit">
+            <button>Skip for now</button>
+            <button>Submit answer</button>
         </div>
     </section>
 
