add interactivity with js

--- a/features/lesson.html
+++ b/features/lesson.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cool Language App | Lesson 1</title>
     <link rel="stylesheet" href="./lesson.css">
+    <script src="./lesson.js" defer></script>
 </head>
 
 <body>
@@ -22,16 +23,20 @@
                 </div>
                 <div class="lesson-questions">
                     <input type="radio" id="good-morning" class="radio-input">
-                    <label for="good-morning">Good morning</label>
+                    <label for="good-morning" class="wrong-one">Good morning</label>
                     <input type="radio" id="hello" class="radio-input">
-                    <label for="hello">Hello</label>
+                    <label for="hello" class="correct">Hello</label>
                     <input type="radio" id="how-are-you" class="radio-input">
-                    <label for="how-are-you">How are you doing?</label>
+                    <label for="how-are-you" class="wrong-two">How are you doing?</label>
+                </div>
+                <div  class="explanation">
+                    <p>In Russian, the word Привет is and informal way to greet someone. It translates to "Hello".</p>
                 </div>
 
             </article>
-
+            
         </div>
+        <button class="continue">Continue</button>
     </section>
 
 
